<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vision_project</name>
  <version>1.0.0</version>
  <description>Final project of computer_vision </description>
  <maintainer email="portanova2002@gmail.com">Adrián Madinabeitia Portanova</maintainer>
  <license>Apache License, Version 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>s
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>libopencv-dev</depend>
  <depend>libpcl-all-dev</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>image_geometry</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
